--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ dependencies:
 - containers
 - directory
 - filepath
+- monad-loops
 
 library:
   source-dirs: src
@@ -31,6 +32,7 @@ executables:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
+    - -O2
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
