--- a/package.yaml
+++ b/package.yaml
@@ -33,9 +33,9 @@ executables:
     source-dirs:         app
     ghc-options:
     - -O2
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      # - -threaded
+      # - -rtsopts
+      # - -with-rtsopts=-N
     dependencies:
     - scala-import-insert
 
